feat: change prototype to nodejs

--- a/Web/prototype/Dockerfile
+++ b/Web/prototype/Dockerfile
@@ -1,7 +1,9 @@
-FROM oven/bun:latest
+FROM node:latest
 
 WORKDIR /app
+COPY ./server/package.json .
+RUN npm i
 COPY ./server .
-RUN bun run build
 ENV FLAG="TCP1P{prototype_polution_is_pretty_common_right?}"
-RUN ["bun", "run", "start"]
+RUN npm run build
+CMD ["npm", "run", "start"]
