--- a/Web/sequel/challenge.yml
+++ b/Web/sequel/challenge.yml
@@ -16,6 +16,8 @@ extra:
     decay: 20
     minimum: 100
 
+connection_info: http://ctf.tcp1p.com:10994
+
 # Flags specify answers that your challenge use. You should generally provide
 # at least one.
 # Can be removed if unused
