fix: cry chall categories:

--- a/Cryptography/PPPPPPvalo/challenge.yml
+++ b/Cryptography/PPPPPPvalo/challenge.yml
@@ -4,7 +4,7 @@
 # Required sections
 name: "PPPPPPvalo"
 author: "azuketto"
-category: category
+category: Cryptography
 description: |
     **Author**: `azuketto`
 
