--- a/Cryptography/belok-dikit-ga-ngaruh/challenge.yml
+++ b/Cryptography/belok-dikit-ga-ngaruh/challenge.yml
@@ -4,7 +4,7 @@
 # Required sections
 name: "Belok dikit ga ngaruh"
 author: "azuketto"
-category: category
+category: Cryptography
 description: |
     **Author**: `azuketto`
 
