--- a/Misc/fmtstr/challenge.yml
+++ b/Misc/fmtstr/challenge.yml
@@ -16,7 +16,7 @@ extra:
     decay: 20
     minimum: 100
 
-connection_info: http://ctf.tcp1p.com:25489
+connection_info: nc ctf.tcp1p.com 25489
 
 # Flags specify answers that your challenge use. You should generally provide
 # at least one.
