feat(pwn): update dist for `Infinite Jackpot 2`

--- a/PWN/Infinite Jackpot 2/challenge.yml
+++ b/PWN/Infinite Jackpot 2/challenge.yml
@@ -35,6 +35,7 @@ tags:
 # Accepts strings
 files:
     - ./dist/chall
+    - ./dist/Dockerfile
 
 # The state of the challenge.
 # This is visible by default. It takes two values: hidden, visible.
