feat(pwn): update dist for `Infinite Jackpot 2`

--- a/PWN/Infinite Jackpot 2/challenge.yml
+++ b/PWN/Infinite Jackpot 2/challenge.yml
@@ -34,8 +34,7 @@ tags:
 # Provide paths to files from the same directory that this file is in
 # Accepts strings
 files:
-    - ./dist/chall
-    - ./dist/Dockerfile
+    - ./dist/dist.zip
 
 # The state of the challenge.
 # This is visible by default. It takes two values: hidden, visible.
