--- a/Misc/fmtstr/challenge.yml
+++ b/Misc/fmtstr/challenge.yml
@@ -23,7 +23,7 @@ connection_info: nc ctf.tcp1p.com 25489
 # Can be removed if unused
 # Accepts strings or dictionaries
 flags:
-    - TCP1P{format_string_in_python_isn't_common_but_it's_a_good_start_for_pyjail}
+    - TCP1P{just_regular_py_jail_yosh:)}
 
 # Tags are used to classify your challenge with topics. You should provide at
 # least one.
