--- a/Web/magic-collision/challenge.yml
+++ b/Web/magic-collision/challenge.yml
@@ -17,6 +17,8 @@ extra:
     decay: 20
     minimum: 100
 
+connection_info: http://ctf.tcp1p.com:38948/?src
+
 # Flags specify answers that your challenge use. You should generally provide
 # at least one.
 # Can be removed if unused
@@ -35,7 +37,6 @@ tags:
 # Provide paths to files from the same directory that this file is in
 # Accepts strings
 files:
-    -
 
 # The state of the challenge.
 # This is visible by default. It takes two values: hidden, visible.
