fix dockerfile location

--- a/Misc/master-proto/challenge.yml
+++ b/Misc/master-proto/challenge.yml
@@ -37,7 +37,7 @@ tags:
 # Provide paths to files from the same directory that this file is in
 # Accepts strings
 files:
-    - ./src/index.ts
+    - ./src/index.js
 
 # The state of the challenge.
 # This is visible by default. It takes two values: hidden, visible.
