--- a/Blockchain/Fallback Fallback Fallback!/outback/challenge/.env
+++ b/Blockchain/Fallback Fallback Fallback!/outback/challenge/.env
@@ -1,7 +1,7 @@
 # https://it-tools.tech/random-port-generator
 PUBLIC_PORT=44044
 # change it to your actual host
-PUBLIC_HOST=103.160.61.141
+PUBLIC_HOST=ctf.tcp1p.com
 # cat /proc/sys/kernel/random/uuid
 CHALLENGE_ID=9fb8d502-1c09-4c19-b513-c5a55fab021c
 # cat /dev/urandom | head -c 32 | base64
