--- a/Blockchain/Fallback Fallback Fallback!/docker-compose.yml
+++ b/Blockchain/Fallback Fallback Fallback!/docker-compose.yml
@@ -1,7 +1,7 @@
-name: paradigm-ctf-challenge
+version: "3"
+
 services:
   launcher:
-    image: challenge
     build:
       context: .
     ports:
@@ -14,3 +14,7 @@ services:
       - HTTP_PORT=8545
       - PROXY_PORT=8080
       - ENV=production
+    deploy:
+      resources:
+        limits:
+          cpus: "1.0"
